--- a/src/styles/photoManagement.css
+++ b/src/styles/photoManagement.css
@@ -43,7 +43,7 @@
   display: block;
   font-size: 2rem;
   font-weight: bold;
-  color: rgb(192, 0, 31);
+  color: var(--primary-color);
   margin-bottom: 0.25rem;
 }
 
