--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -818,8 +818,8 @@ header.event-header {
 }
 
 .control-icon {
-  width: 32px;
-  height: 32px;
+  width: 64px;
+  height: 64px;
   margin-bottom: 4px;
 }
 
@@ -840,11 +840,14 @@ header.event-header {
   align-items: center;
   justify-content: center;
   margin-bottom: 4px;
+  position: absolute;
+  top: calc(50% - 20px);
+  left: calc(50% - 20px);
 }
 
 .position-number {
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: 1.8rem;
   color: var(--primary-color);
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.8);
 }
