--- a/src/styles/ActivityRunner.css
+++ b/src/styles/ActivityRunner.css
@@ -27,9 +27,10 @@
 }
 
 .activity-icon {
-  width: 40px;
-  height: 40px;
+  width: 60px;
+  height: 60px;
   border-radius: 50%;
+  border: 1px solid var(--primary-color);
 }
 
 .activity-details h2 {
