--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
 }
 
 * {
-  font-family: 'Optima', sans-serif;
+  font-family: 'Optima', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 html {
