--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -3,22 +3,30 @@
   src: url('/fonts/Optima Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+  unicode-range: U+0020-007F, U+00A0-00FF, U+0100-017F, U+1E00-1EFF;
 }
-@font-face {
+/* @font-face {
   font-family: 'Optima';
   src: url('/fonts/OPTIMA.TTF') format('truetype');
   font-weight: bold;
   font-style: normal;
-}
-@font-face {
+  font-display: swap;
+  unicode-range: U+0020-007F, U+00A0-00FF, U+0100-017F, U+1E00-1EFF;
+} */
+/* @font-face {
   font-family: 'Optima';
   src: url('/fonts/OPTIMA_B.TTF') format('truetype');
   font-weight: bold;
   font-style: normal;
-}
+  font-display: swap;
+  unicode-range: U+0020-007F, U+00A0-00FF, U+0100-017F, U+1E00-1EFF;
+} */
 @font-face {
   font-family: 'Optima';
   src: url('/fonts/Optima_Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
+  unicode-range: U+0020-007F, U+00A0-00FF, U+0100-017F, U+1E00-1EFF;
 }
