--- a/src/styles/medias.css
+++ b/src/styles/medias.css
@@ -2,4 +2,15 @@
   html {
     font-size: 12px;
   }
+
+  .logo-container {
+    width: 8rem;
+    height: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    padding: 1rem;
+  }
 }
